# django-demo

./: README.md  pyproject.toml
mysite/dm/: models.py  services.py  views.py
mysite/dm/migrations/: 0001_initial.py  0002_alter_user_id.py
mysite/mysite/: settings.py  urls.py
