[tool.poetry]
name = "django-demo"
version = "0.1.0"
description = ""
authors = ["guangluo <guangluo@outlook.com>"]
readme = "README.md"
packages = [{include = "django_demo"}]

[tool.poetry.dependencies]
python = "^3.8"
django = "4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
